Fix ECIP front matter validation errors
- ecip-1025: Fix date format 2017/06/29 → 2017-06-29
- ecip-1039: Fix date format 2017/11/14 → 2017-11-14
- ecip-1047: Fix date format 2019/1/3 → 2019-01-03
- ecip-1077: Quote title containing colon for valid YAML
- zh/ecip-1017: Fix date format 2016/11/20 → 2016-11-20

All 90 ECIPs now pass validation.

--- a/_specs/ecip-1025.md
+++ b/_specs/ecip-1025.md
@@ -6,7 +6,7 @@ author: Wei Tang <hi@that.world>
 status: Draft
 type: Standards Track
 category: Core
-created: 2017/06/29
+created: 2017-06-29
 ---
 
 ## Motivation
