--- a/_specs/ecip-1039.md
+++ b/_specs/ecip-1039.md
@@ -6,7 +6,7 @@ author: Isaac Ardis <isaac@etcdevteam.com>
 status: Final
 type: Standards Track
 category: Core
-created: 2017/11/14
+created: 2017-11-14
 ---
 
 # Abstract
