--- a/_specs/zh/ecip-1017.md
+++ b/_specs/zh/ecip-1017.md
@@ -7,7 +7,7 @@ translator: Roy (以太坊原链协会 ECC) QQ:1251433202
 status: Final
 type: Standards Track
 category: Core
-created: 2016/11/20
+created: 2016-11-20
 ---
 
 ### 摘要
