--- a/_specs/ecip-1047.md
+++ b/_specs/ecip-1047.md
@@ -5,7 +5,7 @@ title: Reduce Gas Limit to 1 Million
 author: Anthony Lusardi (@pyskell)
 status: Withdrawn
 type: Informational
-created: 2019/1/3
+created: 2019-01-03
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/14
 ---
     
