--- a/_specs/ecip-1077.md
+++ b/_specs/ecip-1077.md
@@ -1,6 +1,6 @@
 ---
 ecip: 1077
-title: The Meta Fork ECIP: Establishing _Fork_ type ECIPs and their specifications and processes
+title: "The Meta Fork ECIP: Establishing _Fork_ type ECIPs and their specifications and processes"
 author: Mr. Meows D. Bits
 discussions-to: TBD
 status: Withdrawn
