Fix: Update category field in ECIP-1121 specification
Fix: Removing Category, as not required and will make the build fail.

--- a/_specs/ecip-1121.md
+++ b/_specs/ecip-1121.md
@@ -4,7 +4,7 @@ title: Execution Client Specification Alignment (Olympia Hardfork)
 author: Ethereum Classic Community
 status: Draft
 type: Informational
-category: Core
+category:
 created: 2025-12-14
 ---
 
