Fix Build Requirements: Enhance ECIP 1121 metadata with additional fields
Missing language was preventing build. Added metadata fields for language, translator, discussions link, and placeholders for replaces, superseded-by, and resolution.

--- a/_specs/ecip-1121.md
+++ b/_specs/ecip-1121.md
@@ -1,11 +1,17 @@
 ---
 ecip: 1121
 title: Execution Client Specification Alignment (Olympia Hardfork)
+lang: en
+translator: 
 author: Ethereum Classic Community
+discussions-to: https://github.com/ethereumclassic/ECIPs/discussions/530
 status: Draft
 type: Informational
 category:
 created: 2025-12-14
+replaces: 
+superseded-by: 
+resolution: 
 ---
 
 ## Abstract
