ecip-1121: metadata alignment with Spiral/Mystique
Reclassify ECIP-1121 as Meta to reflect its role in coordinating execution-layer alignment, consistent with prior execution upgrade ECIPs such as Spiral and Mystique.

--- a/_specs/ecip-1121.md
+++ b/_specs/ecip-1121.md
@@ -6,7 +6,7 @@ translator:
 author: Ethereum Classic Community
 discussions-to: https://github.com/ethereumclassic/ECIPs/discussions/530
 status: Draft
-type: Informational
+type: Meta
 category:
 created: 2025-12-14
 replaces: 
@@ -20,7 +20,7 @@ ECIP-1121 documents the Ethereum execution-layer protocol specifications that Et
 
 This ECIP serves as the execution-layer bookend for the Olympia ECIP option set (ECIP-1111, ECIP-1112, ECIP-1113, ECIP-1114, ECIP-1115, ECIP-1116, ECIP-1117, ECIP-1118, ECIP-1119 and ECIP-1120), consolidating execution semantics that are independent of consensus, treasury policy, or data-availability design choices.
 
-This ECIP is informational and does not introduce new protocol changes.
+This ECIP documents and scopes execution-layer specifications for coordination purposes.
 This document proposes the following blocks at which to implement these changes in the Ethereum Classic networks:
 
 TBD on Mordor testnet
@@ -167,7 +167,7 @@ The following specifications are intentionally excluded and governed elsewhere:
 - [EIP-1559](https://eips.ethereum.org/EIPS/eip-1559)
 - [EIP-3198](https://eips.ethereum.org/EIPS/eip-3198)
 
-The following specifficition are related to one or more of the following and are not applicable to ETC
+The following specifications are related to one or more of the following and are not applicable to ETC
 - Proof-of-Stake consensus mechanisms
 - Beacon Chain dependencies
 - Engine API proposer-validator separation
