Remove WIP prefix from 1120

--- a/_specs/ecip-1120.md
+++ b/_specs/ecip-1120.md
@@ -1,7 +1,7 @@
 ---
 lang: en
 ecip: 1120
-title: WIP Basefee Market with Miner Rewards
+title: Basefee Market with Miner Rewards
 subtitle: A minimally complicated implementation of EIP-1559 for Ethereum Classic
 author: Istora Mandiri (@IstoraMandiri), Diego López León (@diega)
 status: Draft
