Remove WIP prefix from 1111-4

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -1,7 +1,7 @@
 ---
 lang: en
 ecip: 1111
-title: WIP Olympia EVM and Protocol Upgrades
+title: Olympia EVM and Protocol Upgrades
 status: Draft
 type: Standards Track
 category: Core
