--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -1,7 +1,7 @@
 ---
 lang: en
 ecip: 1112
-title: WIP Olympia Treasury Contract
+title: Olympia Treasury Contract
 status: Draft
 type: Standards Track
 category: Core
