--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -1,7 +1,7 @@
 ---
 lang: en
 ecip: 1113
-title: WIP Olympia DAO Governance Framework
+title: Olympia DAO Governance Framework
 status: Draft
 type: Meta
 requires: 1112
