--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -1,7 +1,7 @@
 ---
 lang: en
 ecip: 1114
-title: WIP Ethereum Classic Funding Proposal Process
+title: Ethereum Classic Funding Proposal Process
 status: Draft
 type: Meta
 requires: 1113
