Update 1113 and 1114 to ECBP

--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -3,7 +3,8 @@ lang: en
 ecip: 1113
 title: Olympia DAO Governance Framework
 status: Draft
-type: Meta
+type: Standards Track
+category: ECBP
 requires: 1112
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
