--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -3,7 +3,8 @@ lang: en
 ecip: 1114
 title: Ethereum Classic Funding Proposal Process
 status: Draft
-type: Meta
+type: Standards Track
+category: ECBP
 requires: 1113
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
