1120: Apply editorial requests

--- a/_specs/ecip-1120.md
+++ b/_specs/ecip-1120.md
@@ -28,7 +28,7 @@ This ECIP presents key recommendations, with assumed parameters summarized in th
 
 The goal of this ECIP is to identify the least complex and most secure 1559-like implementation within real-world technical design constraints.
 
-ECIP-1120 presents a math-only, protocol-neutral, protocol-native solution that distributes all fees to miners without any smart contracts or a governance system. It is fully self-contained, describing everything needed for an implementation without creating new domains of inquiry.
+ECIP-1120 presents a math-only, protocol-neutral, protocol-native solution that distributes all fees to miners without any smart contracts or a governance system. It is fully self-contained with no dependencies on other ECIPs; once provisional parameters are finalized, this specification provides everything needed for implementation.
 
 ## Specification
 
@@ -172,7 +172,7 @@ The following parameters govern the behavior of ECIP-1120. See [Parameter Select
 | Elasticity multiplier | 4* | Ratio of max gas limit to gas target |
 | Max gas limit | 32,000,000* | Maximum gas per block (base gas target × elasticity multiplier) |
 | Backward fees block count | 64* | Number of ancestor blocks for fee distribution |
-| Distribution curve | Uniform* | Shape of fee distribution (uniform or decay) |
+| Distribution curve | Uniform* | Shape of fee distribution across lookback window |
 
 *Assumed values cannot be finalized at this stage. Final values require client implementation and testing to determine optimal tradeoffs. See [Research](#research) for details.
 
@@ -235,7 +235,7 @@ The goal is to identify a reasonable multiplier given real-world hardware capabi
 
 ### Determining Distribution Parameters
 
-The backward fees block count and distribution curve shape balance client performance (fewer calculations per block) against sufficient smoothing to achieve the desired incentive properties. Final values require implementation and testing across ETC clients to determine optimal tradeoffs.
+The backward fees block count balances client performance (fewer calculations per block) against sufficient smoothing to achieve the desired incentive properties. This ECIP currently specifies a uniform distribution curve; alternative curves such as exponential decay may be explored in future work. Final values require implementation and testing across ETC clients to determine optimal tradeoffs.
 
 ## Backwards Compatibility
 
@@ -263,7 +263,7 @@ Since all fees are returned to miners, total miner compensation remains essentia
 
 ### Manipulation Resistance
 
-The distribution mechanism is designed to satisfy key incentive compatibility properties, including **MMIC** (miners have no short-term incentive to deviate from honest behavior), **UIC** (users have a dominant strategy of bidding their true value), and **OCA-proofness** (resistance to off-chain fee agreements between miners and users).
+The distribution mechanism is intended to satisfy key incentive compatibility properties as defined in [Roughgarden's analysis](https://timroughgarden.org/papers/eip1559.pdf): **MMIC** (myopic miner incentive compatibility, Section 5), **UIC** (user incentive compatibility, Section 4), and **OCA-proofness** (off-chain agreement proofness, Section 6). Formal verification of these properties under ECIP-1120's specific parameters is an area for future research; see [Research](#research).
 
 ### Resource Exhaustion Attacks
 
@@ -277,7 +277,7 @@ Fee smoothing via backward-looking distribution reduces block reward variance, d
 
 ## Research
 
-Certain parameter values cannot be reasonably finalized until the mechanism is implemented and tested across ETC clients. The companion research site at [ecip1120.dev](https://ecip1120.dev) tracks this work, covering economic security modeling, elasticity multiplier benchmarking, distribution curve design, client performance testing, and reference test vectors.
+Certain parameter values cannot be reasonably finalized until the mechanism is implemented and tested across ETC clients. The companion research site at [ecip1120.dev](https://ecip1120.dev) tracks this work, covering economic security modeling, elasticity multiplier benchmarking, distribution curve design, client performance testing, and reference test vectors. This ECIP remains the authoritative specification; any consensus-critical changes will be made here via PR.
 
 ## Implementation
 
